# knu-lms-auto-download

./: .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh
app/: CMakeLists.txt  main.c
include/: shape.h
includes/: knuapi.h  knudef.h  knulms.h  knustring.h  knuutils.h  test_util.h  words.h
lib/: CMakeLists.txt  knuapi.c  knudef.c  knulms.c  knustring.c  knuutils.c  shape.c  words.c
tests/: CMakeLists.txt  all_tests.c  shape.c  test_knuapi.c  test_knulms.c  test_knustring.c  test_knuutils.c  test_util.c  words_tests.c
tests/resources/: naver_norm.html
기말 프로젝트/: 2021113585 원인식 프로젝트 계획서.txt  readme.txt  프로젝트 계획.txt  프로젝트 보고서.docx
기말 프로젝트/http 요청/: cookie.txt  강의자료목록.sh  강의자료목록.txt  강의자료목록정규화.txt  강의자료파일다운로드.sh  강의자료파일목록.sh  강의자료파일목록.txt  강의자료파일목록정규화.txt  개인정보.sh  개인정보.txt  개인정보정규화.txt  과목설정.sh  과목설정.txt  로그아웃.sh  로그인.sh  로그인.txt  메인.sh  메인.txt  메인정규화.txt  전체테스트.sh  정규화.sh
